fixed header layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@
 
 html {
     scrollbar-gutter: stable;
-    --header-height: 64px;
+    --header-height: 86px;
 }
 
 /* Prose dark mode */
